# Support-Forge

./: .gitignore  CLAUDE_USAGE.md  DELIVERABLES_CHECKLIST.md  GETTING_STARTED.md  HELP.md  QUICK_REFERENCE.md  README.md  README_ROOT.md  README_SPRINT2.md  SPRINT2_SUMMARY.md  START_HERE.txt  STATUS_REPORT.md  UNREAL.md  app.py  logrun.py  models.json  pyproject.toml  qt_app.py  requirements.txt  timer.py  tools.py
compare/: __init__.py
compare/interactive_compare/: comparator.py
docs/: architecture.md
interactive_compare/: __init__.py
portfolio_analyzer/: __init__.py  analyzer.py
research_orchestrator/: orchestrator.py
samples/: README.md  example.py  sample_data.json
samples/shared/: models.py  status.py
sentinelbench/: runner.py
sentinelbench/results/: run_2026_09_15.json
skillforge/: runner.py
skillforge/results/: run_2026_09_15.json
speclab/: runner.py
speclab/results/: run_20260615_065856.json  run_2026_09_15.json
speclab_results/: run_20260612_215325.json  run_20260613_003632.json  run_20260613_003956.json  run_20260613_004029.json  run_20260615_141602.json  run_20260615_141643.json  run_20260615_141742.json  sentinelbench_20260615_141802.json  sentinelbench_20260615_141820.json
src/supportforge/shared/: desktop_app.py  setup.py  update_docs.py
tests/: test_basic_sanity.py  test_basics.py  test_portfolio_integration.py  test_timer.py  test_tools.py
