[project]
name = "supportforge"
version = "0.1.0"
description = "Support-Forge AI Desktop Tool"
requires-python = ">=3.12"
dependencies = [
    "PyQt5",
    "requests",
    "python-dotenv",
    "aiohttp",
    "pydantic",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
